src/objects/CMSSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to be configured by the CMS implementator.</description>
    <fields>
        <fullName>SalesforceDomain__c</fullName>
        <label>Salesforce Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterFieldForPublicGroups__c</fullName>
        <defaultValue>&quot;[CMS]ExternalId__c&quot;</defaultValue>
        <description>When a cluster is created, a public group is created. This field determines which cluster field will be used as the name of the public group that is created for the cluster.</description>
        <inlineHelpText>When a cluster is created, a public group is created. This field determines which cluster field will be used as the name of the public group that is created for the cluster.</inlineHelpText>
        <label>Cluster Field for Public Groups</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>SalesforceUserLicenses__c</fullName>
        <defaultValue>&quot;Salesforce,Salesforce Platform&quot;</defaultValue>
        <description>List of Salesforce User Licenses used to determine if a User is a backend one. 
Separated by a comma. (Example: Salesforce,Salesforce Platform)</description>
        <inlineHelpText>List of Salesforce User Licenses used to determine if a User is a backend one. 
Separated by a comma. (Example: Salesforce,Salesforce Platform)</inlineHelpText>
        <label>Salesforce User Licenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMS Settings</label>
</CustomObject>